cluster/manifests/cortex-api/overlays/dev/redis/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: redis
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: redis
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: redis-haproxy
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: redis-haproxy
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
